--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -8,7 +8,7 @@
   <ion-navbar color="primary">
     <ion-title>Schedule</ion-title>
 		<ion-buttons end>
-			<button (click)="openMyList()" ion-button>
+			<button ion-button>
 				<ion-icon name="calendar"></ion-icon>
 			</button>
 		</ion-buttons>
@@ -34,7 +34,7 @@
 <ion-content >
 
 	<ion-fab bottom right>
-    <button ion-fab  (click)="openMyList()"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab ><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 	
 	<ion-grid>
@@ -42,10 +42,11 @@
 			<ion-col col-3><strong>Time</strong></ion-col>
 			<ion-col col-9><strong>Events</strong></ion-col>
 		</ion-row>
-		<ion-row *ngFor="let evento of jcaProveedor.eventos">
+		<ion-row *ngFor="let evento of jcaProveedor.eventos; let i = index">
 			<ion-col col-2>{{ evento.hora }}</ion-col>
-			<ion-col col-10>
-				<ion-card>
+			<ion-col col-1 class="timeline"><ion-icon name="radio-button-on" *ngIf="evento.checked"></ion-icon></ion-col>
+			<ion-col col-9>
+				<ion-card (click)="setChecked(i)">
 					<ion-row>
 						<ion-col col-10><strong>{{ evento.titulo }}</strong></ion-col>
 						<ion-col col-2 text-right><ion-icon [name]="evento.icono"></ion-icon></ion-col>
